# Website

./: .gitignore  MANIFEST.in  README.md  README.org  build.sh  configuration.nix  default.nix  export.el  flake.nix  index.html  pyproject.toml  requirements.txt  run-site.py  run.py  setup.py  shell.nix
app/: __init__.py
app/templates/: admin.html  index.html  login.html
jutlandia_site/: __init__.py
jutlandia_site/static/: style.css
jutlandia_site/templates/: base.html  edit.html  index.html
src/: report.html  robots.txt
src/jutlandia_site/: __init__.py
src/jutlandia_site/static/: events.ics
src/jutlandia_site/templates/: admin.html  base.html  index.html
src/pages/: index.org
src/templates/: level-1.org
static/: style.css
templates/: level-0.org
