[project]
name = "jutlandia-site"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0,<4",
    "flask-sqlalchemy>=3.1.1,<4",
    "requests>=2.32.3,<3",
    "ics==0.7.2",
    "discord.py>=2.6.3",
]

[project.scripts]
run_site = "jutlandia_site:main"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
#module-root = "src"
module-name = "jutlandia_site"

